--- a/2. JavaScript+事件.md
+++ b/2. JavaScript+事件.md
@@ -1,27 +1,158 @@
-# 1. JavaScript+事件
+# 1. JavaScript + 事件
 
 ## 1.1. 谈谈你对 this 的理解？
 
+this 是 JavaScript 中的一个关键字。
+是函数运行时，在函数体内自动生成的一个对象，只能在函数体内部使用。
+
+1. 函数调用：this 指向 window
+2. 对象方法调用：this 指向这个上级对象
+3. 构造函数调用：this 指向这个生成的新对象
+4. apply：this 指向这个函数的第一个参数
+
 ## 1.2. 什么是闭包？闭包产生的背景？有什么问题？怎么解决？举一个闭包的例子？（重要）
+
+- 概念：能够读取其他函数内部变量的函数
+- 形成条件：有两个函数嵌套，内部函数访问了外部函数的变量
+- 作用：
+  - 使用函数内部的变量在函数执行完后, 仍然存活在内存中(延长了局部变量的生命周期)
+  - 让函数外部可以访问到函数内部的变量或函数
+- 存在的问题：闭包占用的内存不会被释放，如果滥用闭包会造成内存泄露
+- 解决方案：js 垃圾回收机制：标记清除法、引用计数法
+
+- 应用：
+  - 定义 js 模块：
+    具有特定功能的 js 文件，将所有的数据和功能都封装在一个函数内部(私有的)，只向外暴露一个包含 n 个方法的对象或函数。模块的使用者只需要通过模块暴露的对象调用方法来实现对应的功能
 
 ## 1.3. Js 的原型和原型链怎么理解？原型链有什么应用？
 
-## 1.4. 你对 call 和 apply 怎么理解？
+- 原型：每一个构造函数都有 prototype 属性，函数的 prototype 属性值就是原型。
+- 原型链：任何一个对象都有自己的原型对象，原型对象本身又是一个对象，一环扣一环形成了一个链式结构，成为原型链。
+- 应用：A 能通过原型链获取到 B、C 中的属性方法
+
+## 1.4. 你对 call 、 apply 、bind 怎么理解？
+
+函数的上下文调用模式，主要用来改变 this 的指向，实现继承。
+
+- func.call(obj, v1, v2)
+  - 第一个参数：改变 this 的指向
+  - 后面的参数：传入的实参
+  - 如果没有参数或第一个参数为 null，this 指向 window
+- func.apply(obj,[v1, v2])
+  - 第一个参数：改变 this 的指向
+  - 第二个参数：一个数组或伪数组
+- func.bind(obj,v1,v2)()
+  - 不会调用函数，克隆一个新的函数
+  - 第一个参数：改变 this 的指向
+  - 第二个参数：传入的实参
+  - bind()是将函数返回，因此后面还需要加()才能调用。
 
 ## 1.5. 继承有哪些方式？你的项目上有应用过继承吗？有自己封装过东西吗？
 
+1. 借助构造函数
+
+   ```JavaScript
+    function Parent1() {
+        this.name = 'parent1 的属性';
+    }
+
+    function Child1() {
+        Parent1.call(this);         //【重要】此处用 call 或 apply 都行：改变 this 的指向
+        this.type = 'child1 的属性';
+    }
+
+    console.log(new Child1);
+   ```
+
+2. 原型链
+
+   ```JavaScript
+    /*
+    通过原型链实现继承
+     */
+    function Parent() {
+        this.name = 'Parent 的属性';
+    }
+
+    function Child() {
+        this.type = 'Child 的属性';
+    }
+
+    Child.prototype = new Parent();
+
+    console.log(new Child());
+   ```
+
+3. 构造函数+原型链
+
+   ```JavaScript
+    /*
+    组合方式实现继承：构造函数、原型链
+     */
+    function Parent3() {
+        this.name = 'Parent 的属性';
+        this.arr = [1, 2, 3];
+    }
+
+    function Child3() {
+        Parent3.call(this); //【重要1】执行 parent方法
+        this.type = 'Child 的属性';
+    }
+    Child3.prototype = new Parent3(); //【重要2】第二次执行parent方法
+
+    var child = new Child3();
+   ```
+
 ## 1.6. Js 有哪些内置对象？你工作中常用那种？列举几个你常用的方法？
+
+- Date
+  - getDate() 获取日 1-31
+  - getDay() 获取星期 0-6（0 代表周日）
+  - getMonth() 获取月 0-11（1 月从 0 开始）
+  - getFullYear() 获取完整年份（浏览器都支持）
+  - getHours() 获取小时 0-23
+  - getMinutes() 获取分钟 0-59
+  - getSeconds() 获取秒 0-59
+  - getMilliseconds() 获取毫秒 （1s = 1000ms）
+  - getTime () 返回累计毫秒数(从 1970/1/1 午夜)
+- Array
+- Math
+  - Math.max() 求最大值
+  - Math.min() 求最小值
+  - Math.abs() 取绝对值
+  - Math.floor() 向下取整
+  - Math.ceil() 向上取整
+  - Math.round() 四舍五入取整
+  - Math.random() 随机数 0-1
 
 ## 1.7. Js 中深拷贝和浅拷贝的区别？
 
-## 1.8. 实现冒泡排序和数组去重？（重要）
+- 浅拷贝
+  对于对象或数组类型，当我们将 a 赋值给 b，然后更改 b 中的属性，a 也会随着变化。
+  也就是说，a 和 b 指向了同一块堆内存，所以修改其中任意的值，另一个值都会随之变化，这就是浅拷贝。
+
+- 深拷贝
+  那么相应的，如果给 b 放到新的内存中，将 a 的各个属性都复制到新内存里，就是深拷贝。
+  也就是说，当 b 中的属性有变化的时候，a 内的属性不会发生变化。
+
+## 1.8. 实现冒泡排序和数组去重？
 
 ## 1.9. 事件包含哪些阶段？
+
+1. 事件的捕获阶段
+2. 事件的目标阶段（触发自己的事件）
+3. 事件的冒泡阶段
 
 ## 1.10. 什么是事件委托？事件委托的原理是什么？他有那些应用场景？
 
 ## 1.11. 如何阻止事件冒泡和事件的默认行为？
 
+    event.stopPropagation();
+
 ## 1.12. Js 注册事件有几种方式？有什么区别吗？
+
+- DOM 0级事件
+
+- DOM 2级事件
 
 ## 1.13. Jq 注册事件有几种方式？他们的区别是什么？举一个事件委托的例子？
