--- a/1. HTML+CSS.md
+++ b/1. HTML+CSS.md
@@ -2,19 +2,111 @@
 
 ## 1.1. 什么是盒子模型？
 
+- 所有 HTML 元素都可以看作是一个盒子，包括 margin（外边距）、padding（内边距）、border（边框）、content（内容）
+- IE 盒子模型的 content 部分包含了 border 和 padding，标准盒子模型不包括。
+- W3C：box-sizing:content-box;（浏览器默认）
+  IE：box-sizing:border-box;
+
 ## 1.2. 如果页面不写 doctype 页面还会解析页面吗？
+
+- DTD（document type definition，文档类型定义）是一系列的语法规则，用来定义 XML 或(X)HTML 的文件类型。浏览器会使用它来判断文档类型，决定使用何种协议来解析，以及切换浏览器模式。
+  解读：DTD 就是告诉浏览器我是什么文档类型，那么浏览器根据这个来判断用什么引擎来解析渲染他。
+
+- DOCTYPE 是用来声明文档类型和 DTD 规范的，一个主要的用途便是文件的合法性验证。如果文件代码不合法，那么浏览器解析时便会出一些差错。
+  解读：DOCTYPE 通知浏览器当前文档的 DTD。
+
+- 常见的 DOCTYPE
+
+1. HTML 5
+   `!DOCTYPE html`
+2. HTML 4.01 Strict，严格模式，该 DTD 包含所有 HTML 元素和属性，但不包括展示型的和弃用的元素（比如 font）
+   `<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">`
+3. HTML 4.01 Transitional，传统模式（宽松模式），该 DTD 包含所有 HTML 元素和属性，包括展示型的和弃用的元素（比如 font）
+   `<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">`
 
 ## 1.3. 定位有几种方式？每种方式定位的基准是什么吗？那种方式会脱标？他们之间会有层级关系吗，谁的层级会高些？
 
+| 定位方式                     | 定位基准                       | 是否脱标 |
+| ---------------------------- | ------------------------------ | -------- |
+| 静态定位`position:static;`   | 所有的标准流都是静态定位       | 否       |
+| 相对定位`position:relative;` | 自己的标准流                   | 否       |
+| 绝对定位`position:absolute;` | 绝对元素往上找的第一个定位元素 | 是       |
+| 固定定位`position: fixed;`   | 浏览器窗口                     | 是       |
+
 ## 1.4. 浮动会带来哪些影响？哪些方式可以清除浮动？
 
+影响：
+
+1. 脱标
+
+清除浮动：
+
+1. 强行给父盒子添加高度 （不推荐，不利于后期维护）
+2. 创建一个新的块级盒子放在浮动元素的最后面，给这个盒子添加一个 css 属性：clear:both;（不推荐，会产生一个多余的盒子）
+3. 伪元素清除浮动 （推荐，书写一个公共类就可以使用）
+
+   ```css
+   .clearfix::after {
+     content: '';
+     display: block;
+     clear: both;
+     height: 0;
+     visibility: hidden;
+   }
+   ```
+
+4. 给父元素添加 overflow:hidden; (在某些特定场景下使用不了)
+
 ## 1.5. 如何让一个不定宽高的 div 垂直水平居中？
+
+1. flex 布局
+
+   ```css
+   .box{
+      display: flex;   <!-- 弹性布局 -->
+      justify-content: space-around;  <!-- 水平居中 -->
+      align-items: center;  <!-- 垂直居中 -->
+   }
+   ```
+
+2. 绝对定位和 transfrom
+
+   ```css
+   .box {
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+   }
+   ```
+
+3. 定位和 `margin:auto;`
+
+4. `text-align:center`实现元素的水平居中，以及通过设置元素的 height 和 line-height 相同来实现子元素的垂直居中
+
+5. `diplay：table-cell`
+   把其变成表格样式，再利用表格的样式来进行居中
 
 ## 1.6. H5/C3 增加了哪些新属性，分别列举一下？
 
 ## 1.7. H5/C3 新属性如何做兼容处理？（重要）
 
 ## 1.8. Css 如何画一个三角形？
+
+- css 画三角形代码原理采用的是均分原理；
+- 在矩形的直角，两条边的样式要均分，把 div 的宽高设为零，四条边 top right bottom left 设置一个宽度
+- 把需要显示的一边设置有色，其他的设置透明，就这样一个三角形就出来了
+
+```css
+.box {
+  　　width: 0;
+  　　height: 0;
+  　　border-top: 50px solid transparent;
+  　　border-right: 50px solid red;
+  　　border-bottom: 50px solid transparent;
+  　　border-left: 50px solid transparent;
+}
+```
 
 ## 1.9. H5 的本地存储和传统的存储区别是什么？
 
@@ -28,4 +120,29 @@
 
 ## 1.14. em 和 rem 的区别？
 
-## 1.15. 移动端页面如何来做适配？（重要）
+## 1.15. 移动端页面如何来做适配？
+
+## 1.16. JS 如何设置获取盒模型对应的宽和高
+
+- dom.style.width/height
+     这种方式只能取到 dom 元素内联样式所设置的宽高，也就是说如果该节点的样式是在 style 标签中或外联的 CSS 文件中设置的话，通过这种方法是获取不到 dom 的宽高的。
+
+- dom.currentStyle.width/height
+     这种方式获取的是在页面渲染完成后的结果，就是说不管是哪种方式设置的样式，都能获取到。但这种方式只有 IE 浏览器支持。
+
+- window.getComputedStyle(dom).width/height
+     这种方式的原理和 2 是一样的，这个可以兼容更多的浏览器，通用性好一些。
+
+- dom.getBoundingClientRect().width/height
+     这种方式是根据元素在视窗中的绝对位置来获取宽高的。
+
+- dom.offsetWidth/offsetHeight
+     这个就没什么好说的了，最常用的，也是兼容最好的。
+
+## 1.17. css reset 和 normalize.css 有什么区别
+
+- 两者都是通过重置样式，保持浏览器样式的一致性；
+- 前者几乎为所有标签添加了样式，后者保持了许多浏览器样式，保持尽可能的一致；
+- 后者修复了常见的桌面端和移动端浏览器的 bug：包含了 HTML5 元素的显示设置、预格式化文字的 font-size 问题、在 IE9 中 SVG 的溢出、许多出现在各浏览器和操作系统中的与表单相关的 bug。
+- 前者中含有大段的继承链；
+- 后者模块化，文档较前者来说丰富；
