--- a/4. jQuery+bootstrap.md
+++ b/4. jQuery+bootstrap.md
@@ -1,4 +1,4 @@
-# 1. jQuery + bootst
+# 1. jQuery + Bootstrap
 
 ## 1.1. Jq 和 zepto 的区别是什么？他们一般的使用场景？
 
@@ -16,7 +16,7 @@
 
 ## 1.8. Bootstrap 有使用过吗？为什么使用？
 
-## 1.9. Bootstrap 的栅格系统是什么？工作原理是什么？
+## 1.9. Bootstrap 的栅格系统是什么？工作原理是什么？+++
 
 ## 1.10. Bootstrap 中设置分页的 class？
 
