--- a/3. 跨域+Ajax.md
+++ b/3. 跨域+Ajax.md
@@ -1,23 +1,150 @@
 # 1. 跨域+ Ajax
 
-## 1.1. 说说 Jsonp 的原理？jsonp 是用来解决什么问题的？为什么会有这个问题？Jsonp 有什么缺点？（重要）
+## 1.1. doctype 是什么？
 
-## 1.2. get 和 post 有什么区别？
+- DTD（document type definition，文档类型定义）是一系列的语法规则，用来定义 XML 或(X)HTML 的文件类型。浏览器会使用它来判断文档类型，决定使用何种协议来解析，以及切换浏览器模式。
+  解读：DTD 就是告诉浏览器我是什么文档类型，那么浏览器根据这个来判断用什么引擎来解析渲染他。
 
-## 1.3. 你们公司是怎么解决跨域这个问题？（重要）
+- DOCTYPE 是用来声明文档类型和 DTD 规范的，一个主要的用途便是文件的合法性验证。如果文件代码不合法，那么浏览器解析时便会出一些差错。
+  解读：DOCTYPE 通知浏览器当前文档的 DTD。
 
-## 1.4. 你是怎么理解 ajax 的？Ajax 的原理能说一下吗？
+- 常见的 DOCTYPE
 
-## 1.5. 你对同步和异步是怎么理解的？
+1. HTML 5
+   `!DOCTYPE html`
+2. HTML 4.01 Strict，严格模式，该 DTD 包含所有 HTML 元素和属性，但不包括展示型的和弃用的元素（比如 font）
+   `<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">`
+3. HTML 4.01 Transitional，传统模式（宽松模式），该 DTD 包含所有 HTML 元素和属性，包括展示型的和弃用的元素（比如 font）
+   `<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">`
 
-## 1.6. 页面传参有没有出现过乱码的情况？如果有你是怎么解决的？
+## 1.2. 说说 Jsonp 的原理？jsonp 是用来解决什么问题的？为什么会有这个问题？Jsonp 有什么缺点？（重要）
 
-## 1.7. 在前后端数据交互的时候，有处理过（参数）数据加密的情况吗？
+## 1.3. get 和 post 有什么区别？
 
-## 1.8. Json 字符串和 json 对象怎么相互转换？（重要）
+![区别](https://user-gold-cdn.xitu.io/2018/11/16/1671bc56731bf8a8?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 
-## 1.9. Jq 封装的 Ajax 有多少个 callback？一般页面的 loading 层（加载的动画）都是写到那个回调函数里面？
+## 1.4. 你们公司是怎么解决跨域这个问题？（重要）
 
-## 1.10. 一个页面从输入 url 到页面加载显示完成，这个过程发生了什么？
+## 1.5. 你是怎么理解 ajax 的？Ajax 的原理能说一下吗？
 
-## 1.11. http 的常用的状态码遇到过那些？分别代表什么意思？
+## 1.6. 你对同步和异步是怎么理解的？
+
+## 1.7. 页面传参有没有出现过乱码的情况？如果有你是怎么解决的？
+
+## 1.8. 在前后端数据交互的时候，有处理过（参数）数据加密的情况吗？
+
+## 1.9. Json 字符串和 json 对象怎么相互转换？（重要）
+
+## 1.10. Jq 封装的 Ajax 有多少个 callback？一般页面的 loading 层（加载的动画）都是写到那个回调函数里面？
+
+## 1.11. 一个页面从输入 url 到页面加载显示完成，这个过程发生了什么？
+
+1. 在浏览器地址栏输入 URL
+
+2. 浏览器查看**缓存**，如果请求资源在缓存中并且新鲜，跳转到转码步骤
+
+   - 如果资源未缓存，发起新请求
+   - 如果已缓存，检验是否足够新鲜，足够新鲜直接提供给客户端，否则与服务器进行验证。
+   - 检验新鲜通常有两个 HTTP 头进行控制`Expires`和 `Cache-Control`：
+     - HTTP1.0 提供 `Expires`，值为一个绝对时间表示缓存新鲜日期
+     - HTTP1.1 增加了 `Cache-Control: max-age=`,值为以秒为单位的最大新鲜时间
+
+3. 浏览器**解析 URL**获取协议，主机，端口，path
+
+4. 浏览器**组装一个 HTTP（GET）请求报文**
+
+5. 浏览器**获取主机 ip 地址**，过程如下：
+
+   1. 浏览器缓存
+   2. 本机缓存
+   3. hosts 文件
+   4. 路由器缓存
+   5. ISP DNS 缓存
+   6. DNS 递归查询（可能存在负载均衡导致每次 IP 不一样）
+
+6. 打开一个 socket 与目标 IP 地址，端口建立 TCP 链接，三次握手如下：
+
+   1. 客户端发送一个 TCP 的**SYN=1，Seq=X**的包到服务器端口
+   2. 服务器发回**SYN=1， ACK=X+1， Seq=Y**的响应包
+   3. 客户端发送**ACK=Y+1， Seq=Z**
+
+7. TCP 链接建立后**发送 HTTP 请求**
+
+8. 服务器接受请求并解析，将请求转发到服务程序，如虚拟主机使用 HTTP Host 头部判断请求的服务程序
+
+9. 服务器检查**HTTP 请求头是否包含缓存验证信息**如果验证缓存新鲜，返回**304**等对应状态码
+
+10. 处理程序读取完整请求并准备 HTTP 响应，可能需要查询数据库等操作
+
+11. 服务器将**响应报文通过 TCP 连接发送回浏览器**
+
+12. 浏览器接收 HTTP 响应，然后根据情况选择
+
+    关闭 TCP 连接或者保留重用，关闭 TCP 连接的四次握手如下：
+
+    1. 主动方发送**Fin=1， Ack=Z， Seq= X**报文
+    2. 被动方发送**ACK=X+1， Seq=Z**报文
+    3. 被动方发送**Fin=1， ACK=X， Seq=Y**报文
+    4. 主动方发送**ACK=Y， Seq=X**报文
+
+13. 浏览器检查响应状态吗：是否为 1XX，3XX， 4XX， 5XX，这些情况处理与 2XX 不同
+
+14. 如果资源可缓存，**进行缓存**
+
+15. 对响应进行**解码**（例如 gzip 压缩）
+
+16. 根据资源类型决定如何处理（假设资源为 HTML 文档）
+
+17. **解析 HTML 文档，构件 DOM 树，下载资源，构造 CSSOM 树，执行 js 脚本**，这些操作没有严格的先后顺序，以下分别解释
+
+18. 构建 DOM 树：
+
+    1. **Tokenizing**：根据 HTML 规范将字符流解析为标记
+    2. **Lexing**：词法分析将标记转换为对象并定义属性和规则
+    3. **DOM construction**：根据 HTML 标记关系将对象组成 DOM 树
+
+19. 解析过程中遇到图片、样式表、js 文件，**启动下载**
+
+20. 构建 CSSOM 树：
+
+    1. **Tokenizing**：字符流转换为标记流
+    2. **Node**：根据标记创建节点
+    3. **CSSOM**：节点创建 CSSOM 树
+
+21. 根据 DOM 树和 CSSOM 树构建渲染树:
+
+    1. 从 DOM 树的根节点遍历所有**可见节点**，不可见节点包括：1）`script`,`meta`这样本身不可见的标签。2)被 css 隐藏的节点，如`display: none`
+    2. 对每一个可见节点，找到恰当的 CSSOM 规则并应用
+    3. 发布可视节点的内容和计算样式
+
+22. js 解析如下：
+
+    1. 浏览器创建 Document 对象并解析 HTML，将解析到的元素和文本节点添加到文档中，此时**document.readystate 为 loading**
+    2. HTML 解析器遇到**没有 async 和 defer 的 script 时**，将他们添加到文档中，然后执行行内或外部脚本。这些脚本会同步执行，并且在脚本下载和执行时解析器会暂停。这样就可以用 document.write()把文本插入到输入流中。**同步脚本经常简单定义函数和注册事件处理程序，他们可以遍历和操作 script 和他们之前的文档内容**
+    3. 当解析器遇到设置了**async**属性的 script 时，开始下载脚本并继续解析文档。脚本会在它**下载完成后尽快执行**，但是**解析器不会停下来等它下载**。异步脚本**禁止使用 document.write()**，它们可以访问自己 script 和之前的文档元素
+    4. 当文档完成解析，document.readState 变成 interactive
+    5. 所有**defer**脚本会**按照在文档出现的顺序执行**，延迟脚本**能访问完整文档树**，禁止使用 document.write()
+    6. 浏览器**在 Document 对象上触发 DOMContentLoaded 事件**
+    7. 此时文档完全解析完成，浏览器可能还在等待如图片等内容加载，等这些**内容完成载入并且所有异步脚本完成载入和执行**，document.readState 变为 complete,window 触发 load 事件
+
+23. **显示页面**（HTML 解析过程中会逐步显示页面）
+
+## 1.12. http 的常用的状态码遇到过那些？分别代表什么意思？
+
+- 1xx：指示信息——表示请求已接受，继续处理
+- 2xx：成功——表示请求已被成功接收
+- 3xx：重定向——要完成请求必须进行更进一步的操作
+- 4xx：客户端错误——请求有语法错误或请求无法实现
+- 5xx：服务器错误——服务器未能实现合法的请求
+
+200 OK：客户端请求成功
+206 Partial Content：客户发送了一个带有 Range 头的 GET 请求，服务器完成了它
+301 Moved Permanently：永久重定向，所请求的页面已经转移到新的 url
+302 Found：临时重定向，所请求的页面已经临时转移至新的 url
+304 Not MOdified：缓存，客户端有缓冲的文档并发出了一个条件性的请求，服务器告诉客户，原来缓冲的文档还可以继续使用
+400 Bad Request：客户端有语法错误，不能被服务器所理解
+401 Unauthorized：请求未经授权，这个状态码必须和 WWW-Authenticate 报头域一起使用
+403 Forbidden：对被请求页面的访问被禁止
+404 Not Found：请求资源不存在
+500 Internal Server Error：服务器发生不可预期的错误原来缓冲的文档还可以继续使用
+503 Server Unavailable：请求未完成，服务器临时过载或宕机，一段时间后可能恢复正常
