--- a/1. HTML+CSS.md
+++ b/1. HTML+CSS.md
@@ -7,23 +7,6 @@
 - W3C：box-sizing:content-box;（浏览器默认）
   IE：box-sizing:border-box;
 
-## 1.2. 如果页面不写 doctype 页面还会解析页面吗？
-
-- DTD（document type definition，文档类型定义）是一系列的语法规则，用来定义 XML 或(X)HTML 的文件类型。浏览器会使用它来判断文档类型，决定使用何种协议来解析，以及切换浏览器模式。
-  解读：DTD 就是告诉浏览器我是什么文档类型，那么浏览器根据这个来判断用什么引擎来解析渲染他。
-
-- DOCTYPE 是用来声明文档类型和 DTD 规范的，一个主要的用途便是文件的合法性验证。如果文件代码不合法，那么浏览器解析时便会出一些差错。
-  解读：DOCTYPE 通知浏览器当前文档的 DTD。
-
-- 常见的 DOCTYPE
-
-1. HTML 5
-   `!DOCTYPE html`
-2. HTML 4.01 Strict，严格模式，该 DTD 包含所有 HTML 元素和属性，但不包括展示型的和弃用的元素（比如 font）
-   `<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">`
-3. HTML 4.01 Transitional，传统模式（宽松模式），该 DTD 包含所有 HTML 元素和属性，包括展示型的和弃用的元素（比如 font）
-   `<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">`
-
 ## 1.3. 定位有几种方式？每种方式定位的基准是什么吗？那种方式会脱标？他们之间会有层级关系吗，谁的层级会高些？
 
 | 定位方式                     | 定位基准                       | 是否脱标 |
@@ -146,3 +129,22 @@
 - 后者修复了常见的桌面端和移动端浏览器的 bug：包含了 HTML5 元素的显示设置、预格式化文字的 font-size 问题、在 IE9 中 SVG 的溢出、许多出现在各浏览器和操作系统中的与表单相关的 bug。
 - 前者中含有大段的继承链；
 - 后者模块化，文档较前者来说丰富；
+
+## HTML 全局属性(global attribute)有哪些
+
+- accesskey:设置快捷键，提供快速访问元素如 aaa 在 windows 下的 firefox 中按 alt + shift + a 可激活元素
+- class:为元素设置类标识，多个类名用空格分开，CSS 和 javascript 可通过 class 属性获取元素
+- contenteditable: 指定元素内容是否可编辑
+- contextmenu: 自定义鼠标右键弹出菜单内容
+- data-\*: 为元素增加自定义属性
+- dir: 设置元素文本方向
+- draggable: 设置元素是否可拖拽
+- dropzone: 设置元素拖放类型： copy, move, link
+- hidden: 表示一个元素是否与文档。样式上会导致元素不显示，但是不能用这个属性实现样式效果
+- id: 元素 id，文档内唯一
+- lang: 元素内容的的语言
+- spellcheck: 是否启动拼写和语法检查
+- style: 行内 css 样式
+- tabindex: 设置元素可以获得焦点，通过 tab 可以导航
+- title: 元素相关的建议信息
+- translate: 元素和子孙节点内容是否需要本地化
