--- a/3. 跨域+Ajax.md
+++ b/3. 跨域+Ajax.md
@@ -1,39 +1,70 @@
 # 1. 跨域+ Ajax
 
-## 1.1. doctype 是什么？
+## 介绍下浏览器跨域
 
-- DTD（document type definition，文档类型定义）是一系列的语法规则，用来定义 XML 或(X)HTML 的文件类型。浏览器会使用它来判断文档类型，决定使用何种协议来解析，以及切换浏览器模式。
-  解读：DTD 就是告诉浏览器我是什么文档类型，那么浏览器根据这个来判断用什么引擎来解析渲染他。
+## 怎么去解决跨域问题
 
-- DOCTYPE 是用来声明文档类型和 DTD 规范的，一个主要的用途便是文件的合法性验证。如果文件代码不合法，那么浏览器解析时便会出一些差错。
-  解读：DOCTYPE 通知浏览器当前文档的 DTD。
+## 1.2. 说说 Jsonp 的原理？jsonp 是用来解决什么问题的？为什么会有这个问题？Jsonp 有什么缺点？
 
-- 常见的 DOCTYPE
+ajax 请求受同源策略影响，不允许进行跨域请求，而 script 标签 src 属性中的链接却可以访问跨域的 js 脚本，利用这个特性，服务端不再返回 JSON 格式的数据，而是返回一段调用某个函数的 js 代码，在 src 中进行了调用，这样实现了跨域。
 
-1. HTML 5
-   `!DOCTYPE html`
-2. HTML 4.01 Strict，严格模式，该 DTD 包含所有 HTML 元素和属性，但不包括展示型的和弃用的元素（比如 font）
-   `<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">`
-3. HTML 4.01 Transitional，传统模式（宽松模式），该 DTD 包含所有 HTML 元素和属性，包括展示型的和弃用的元素（比如 font）
-   `<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">`
+- Jsonp 优点:
+  完美解决在测试或者开发中获取不同域下的数据，用户传递一个 callback 参数给服务端，然后服务端返回数据时会将这个 callback 参数作为函数名来包裹住 JSON 数据，这样客户端就可以随意定制自己的函数来自动处理返回数据了
+- Jsonp 缺点:
+  Jsonp 只支持 get 请求而不支持 post 请求，也即是说如果想传给后台一个 json 格式的数据，浏览器会报一个 http 状态码 415 错误，告诉你请求格式不正确
 
-## 1.2. 说说 Jsonp 的原理？jsonp 是用来解决什么问题的？为什么会有这个问题？Jsonp 有什么缺点？（重要）
+## Ajax 发生跨域要设置什么（前端）
+
+## 1.5. Ajax 的优缺点是什么？
+
+- 优点：
+  1. 最大的一点是页面无刷新，在页面内与服务器通信，给用户的体验非常好。
+  2. 使用异步方式与服务器通信，不需要打断用户的操作，具有更加迅速的响应能力。
+  3. 可以把以前一些服务器负担的工作转嫁到客户端，利用客户端闲置的能力来处理，减轻服务器和带宽的负担，节约空间和宽带租用成本。并且减轻服务器的负担，ajax 的原则是“按需取数据”，可以最大程度的减少冗余请求，和响应对服务器造成的负担。
+  4. 基于标准化的并被广泛支持的技术，不需要下载插件或者小程序。
+- 缺点：
+  1. ajax 不支持浏览器 back 按钮。
+  2. 安全问题 AJAX 暴露了与服务器交互的细节。
+  3. 对搜索引擎的支持比较弱。
+  4. 破坏了程序的异常机制。
+  5. 不容易调试
 
 ## 1.3. get 和 post 有什么区别？
 
 ![区别](https://user-gold-cdn.xitu.io/2018/11/16/1671bc56731bf8a8?imageView2/0/w/1280/h/960/format/webp/ignore-error/1)
 
-## 1.4. 你们公司是怎么解决跨域这个问题？（重要）
+## 1.4. 你是怎么理解 ajax 的？Ajax 的原理能说一下吗？
 
-## 1.5. 你是怎么理解 ajax 的？Ajax 的原理能说一下吗？
+Ajax 的原理简单来说通过 XmlHttpRequest 对象来向服务器发异步请求，从服务器获得数据，然后用 javascript 来操作 DOM 而更新页面。这其中最关键的一步就是从服务器获得请求数据。
+
+1. 创建 XMLHttpRequest 对象
+2. 建立连接，设置为 GET 发送：xmlHttp.open("GET", "/ajax/getHint.jsp?q=" + txtValue, true);
+3. 发送数据：xmlHttp.send();
+4. 注册回调方法：xmlHttp.onreadystatechange = ajaxCallback;
+5. 执行回调：
+
+```JavaScript
+function ajaxCallback(){
+//响应就绪时
+if(xmlHttp.readyState == 4 && xmlHttp.status == 200){
+searchInput.value = xmlHttp.responseText;
+ }
+}
+```
 
 ## 1.6. 你对同步和异步是怎么理解的？
+
+- 同步：同步任务指的是，在主线程上排队执行的任务，只有前一个任务执行完毕，才能执行后一个任务。
+- 异步：不进入主线程、而进入"任务队列"（task queue）的任务，只有等主线程任务执行完毕，"任务队列"开始通知主线程，请求执行任务，该任务才会进入主线程执行
 
 ## 1.7. 页面传参有没有出现过乱码的情况？如果有你是怎么解决的？
 
 ## 1.8. 在前后端数据交互的时候，有处理过（参数）数据加密的情况吗？
 
 ## 1.9. Json 字符串和 json 对象怎么相互转换？（重要）
+
+- `JSON.parse()` 从一个字符串中解析出 json 对象
+- `JSON.stringify()` 从一个对象中解析出字符串
 
 ## 1.10. Jq 封装的 Ajax 有多少个 callback？一般页面的 loading 层（加载的动画）都是写到那个回调函数里面？
 
@@ -64,8 +95,8 @@
 
 6. 打开一个 socket 与目标 IP 地址，端口建立 TCP 链接，三次握手如下：
 
-   1. 客户端发送一个 TCP 的**SYN=1，Seq=X**的包到服务器端口
-   2. 服务器发回**SYN=1， ACK=X+1， Seq=Y**的响应包
+   1. 客户端发送一个 TCP 的**SYN=1，Seq=X**的包到服务器端口，客户端进入 SYN_SEND 状态。
+   2. 服务器发回**SYN=1， ACK=X+1， Seq=Y**的响应包，服务器端进入 SYN_RCVD 状态。
    3. 客户端发送**ACK=Y+1， Seq=Z**
 
 7. TCP 链接建立后**发送 HTTP 请求**
@@ -148,3 +179,9 @@
 404 Not Found：请求资源不存在
 500 Internal Server Error：服务器发生不可预期的错误原来缓冲的文档还可以继续使用
 503 Server Unavailable：请求未完成，服务器临时过载或宕机，一段时间后可能恢复正常
+
+## 使用Async会注意哪些东西
+
+## Async里面有多个await请求，可以怎么优化（请求是否有依赖）
+
+## Promise和Async处理失败的时候有什么区别
