--- a/2. JavaScript.md
+++ b/2. JavaScript.md
@@ -135,24 +135,37 @@ this 是 JavaScript 中的一个关键字。
   那么相应的，如果给 b 放到新的内存中，将 a 的各个属性都复制到新内存里，就是深拷贝。
   也就是说，当 b 中的属性有变化的时候，a 内的属性不会发生变化。
 
-## 1.8. 实现冒泡排序和数组去重？
-
-## 1.9. 事件包含哪些阶段？
+## 1.8. 事件包含哪些阶段？
 
 1. 事件的捕获阶段
 2. 事件的目标阶段（触发自己的事件）
 3. 事件的冒泡阶段
 
-## 1.10. 什么是事件委托？事件委托的原理是什么？他有那些应用场景？
+## 1.9. 什么是事件委托？事件委托的原理是什么？他有那些应用场景？
 
-## 1.11. 如何阻止事件冒泡和事件的默认行为？
+1. 当网页中需要触发事件的对象比较多的时候，为了避免内存泄漏，我们把事件委托到其父对象上，借助事件冒泡机制，可以将事件委托到 body，document 等元素上，这样等于一个页面就只有一个事件触发，避免直接把事件添加到多个对象上
+2. 动态加载的数据是不能直接进行事件的绑定，这时就需要使用事件委托。
+   例如：`$(body).on('click','#div',function(){})`
 
-    event.stopPropagation();
+## 1.10. 如何阻止事件冒泡和事件的默认行为？
 
-## 1.12. Js 注册事件有几种方式？有什么区别吗？
+- 阻止浏览器的默认行为
+  - IE9 之前：window.event.returnValue = false;
+  - IE9+ FF Chrome：e.preventDefault();
+- 停止事件冒泡
+  - IE9+ FF Chrome：e.stopPropagation();
+  - event.canceBubble = true; //ie9 之前
+- 原生 JavaScript 中，return false;只阻止默认行为，不阻止冒泡，jQuery 中的 return false;既阻止默认行为，又阻止冒泡
 
-- DOM 0级事件
+## 1.11. Js 注册事件有几种方式？有什么区别吗？
 
-- DOM 2级事件
+- DOM 0 级事件
 
-## 1.13. Jq 注册事件有几种方式？他们的区别是什么？举一个事件委托的例子？
+- DOM 2 级事件
+
+## 1.12. Jq 注册事件有几种方式？他们的区别是什么？举一个事件委托的例子？
+
+## prop 和 attr 的区别
+
+- 对于 HTML 元素本身就带有的固有属性，在处理时，使用 prop 方法。
+- 对于 HTML 元素我们自己自定义的 DOM 属性，在处理时，使用 attr 方法
