--- a/1. HTML+CSS.md
+++ b/1. HTML+CSS.md
@@ -7,7 +7,7 @@
 - W3C：box-sizing:content-box;（浏览器默认）
   IE：box-sizing:border-box;
 
-## 1.3. 定位有几种方式？每种方式定位的基准是什么吗？那种方式会脱标？他们之间会有层级关系吗，谁的层级会高些？
+## 1.2. 定位有几种方式？每种方式定位的基准是什么吗？那种方式会脱标？他们之间会有层级关系吗，谁的层级会高些？
 
 | 定位方式                     | 定位基准                       | 是否脱标 |
 | ---------------------------- | ------------------------------ | -------- |
@@ -16,7 +16,7 @@
 | 绝对定位`position:absolute;` | 绝对元素往上找的第一个定位元素 | 是       |
 | 固定定位`position: fixed;`   | 浏览器窗口                     | 是       |
 
-## 1.4. 浮动会带来哪些影响？哪些方式可以清除浮动？
+## 1.3. 浮动会带来哪些影响？哪些方式可以清除浮动？
 
 影响：
 
@@ -40,7 +40,7 @@
 
 4. 给父元素添加 overflow:hidden; (在某些特定场景下使用不了)
 
-## 1.5. 如何让一个不定宽高的 div 垂直水平居中？
+## 1.4. 如何让一个不定宽高的 div 垂直水平居中？
 
 1. flex 布局
 
@@ -70,11 +70,20 @@
 5. `diplay：table-cell`
    把其变成表格样式，再利用表格的样式来进行居中
 
-## 1.6. H5/C3 增加了哪些新属性，分别列举一下？
+## 1.5. H5/C3 增加了哪些新属性，分别列举一下？
 
-## 1.7. H5/C3 新属性如何做兼容处理？（重要）
+1. 离线缓存。可以在关闭浏览器后再次打开时恢复数据，以减少网络流量。
+2. 音频视频自由嵌入，多媒体形式更为灵活。
+3. 地理定位。地理位置定位，让定位和导航不再专属导航软件，地图也不用下载非常大的地图包，可以通过缓存来解决，到哪儿下哪儿，更灵活
+4. Canvas 绘图，提升移动平台的绘图能力。使用 Canvas API 可以简单绘制热点图收集用户体验资料，支持图片的移动、旋转、缩放等常规编. 。
+5. 丰富的交互方式。提升互动能力：拖拽、撤销历史操作、文本选择等。
+6. 开发及维护成本低，这个相对于原生 APP 开发来说。更低的开发及维护成本；使页面变得更小，减少了用户不必要的支出;而且，性能更好使. 电量更低。
+7. CSS3 视觉设计师的辅助利器的支持。CSS3 支持了字体的嵌入、版面的排版，以及最令人印象深刻的动画功能。
+8. html5 调用手机摄像头和手机相册、通讯录等功能。
 
-## 1.8. Css 如何画一个三角形？
+## 1.6. H5/C3 新属性如何做兼容处理？（重要）
+
+## 1.7. Css 如何画一个三角形？
 
 - css 画三角形代码原理采用的是均分原理；
 - 在矩形的直角，两条边的样式要均分，把 div 的宽高设为零，四条边 top right bottom left 设置一个宽度
@@ -91,15 +100,31 @@
 }
 ```
 
-## 1.9. H5 的本地存储和传统的存储区别是什么？
+## 1.8. HTML5 应用程序缓存和浏览器缓存有什么区别？
 
-## 1.10. 页面之间的参数传递有哪些方式？
+HTML5 引入了应用程序缓存，这意味着 web 应用可进行缓存，并可在没有因特网连接时进行访问。
+应用程序缓存为应用带来三个优势：
 
-## 1.11. 浏览器缓存和离线缓存的区别是什么吗？
+- 离线浏览 - 用户可在应用离线时使用它们
+- 速度 - 已缓存资源加载得更快
+- 减少服务器负载 - 浏览器将只从服务器下载更新过或更改过的资源。
 
-## 1.12. 为什么会有缓存？如果不想缓存如何避免掉？
+实现借助于 manifest 文件
+`<html manifest="demo.appcache">`
 
-## 1.13. H5 的 wbsocket 是什么？应用场景有哪些？和 http 以及 https 的区别是什么？
+## 1.9. 页面之间的参数传递有哪些方式？
+
+## 1.10. 浏览器缓存和离线缓存的区别是什么吗？
+
+## 1.11. 为什么会有缓存？如果不想缓存如何避免掉？
+
+## 1.12. H5 的 wbsocket 是什么？应用场景有哪些？
+
+## 1.13. http 以及 https 的区别是什么？
+
+http 和 https 使用的是完全不同的连接方式,用的端口也不一样,前者是 80,后者是 443。
+HTTPS 是以安全为目标的 HTTP 通道，简单讲是 HTTP 的安全版。
+由于 https 要还密钥和确认加密算法的过程，所以更安全。
 
 ## 1.14. em 和 rem 的区别？
 
@@ -130,7 +155,7 @@
 - 前者中含有大段的继承链；
 - 后者模块化，文档较前者来说丰富；
 
-## HTML 全局属性(global attribute)有哪些
+## 1.18. HTML 全局属性(global attribute)有哪些
 
 - accesskey:设置快捷键，提供快速访问元素如 aaa 在 windows 下的 firefox 中按 alt + shift + a 可激活元素
 - class:为元素设置类标识，多个类名用空格分开，CSS 和 javascript 可通过 class 属性获取元素
@@ -148,3 +173,9 @@
 - tabindex: 设置元素可以获得焦点，通过 tab 可以导航
 - title: 元素相关的建议信息
 - translate: 元素和子孙节点内容是否需要本地化
+
+## 1.19. window.onload 和 document ready 的区别？
+
+- `window.onload` 是在 dom 文档树加载完和所有文件加载完之后执行一个函数， `Document.ready` 原生没有这个方法，jquery 中有 `$().ready(function)`,在 dom 文档树加载完之后执行一个函数（注意，这里面的文档树加载完不代表全部文件加载完）
+- `$(document).ready` 要比 `window.onload` 先执行
+- `window.onload` 只能出来一次，`$(document).ready` 可以出现多次
