浏览器缓存机制

--- a/07-浏览器缓存机制.md
+++ b/07-浏览器缓存机制.md
@@ -114,10 +114,53 @@ ETag（Entity Tag）：被请求变量的实体值。
 3. 服务器第二次请求时，会对比浏览器传过来的 `If-None-Match` 和服务器重新生成的一个新的 `ETag`，判断资源是否有变化。如果没有变化则返回 304 Not Modified，但不返回资源内容（此时，由于 `ETag` 重新生成过，`response header` 中还会把这个 `ETag` 返回，即使这个 `ETag` 并无变化）。如果有变化，就正常返回资源内容（继续重复整个流程）。这是服务器返回 304 时的 `response header`：
 4. 浏览器如果收到 304 的响应，就会从缓存中加载资源。
 
-## 1.5. 浏览器行为对缓存的影响
+## 1.5. 不能缓存的请求
+
+1. HTTP 信息头中包含`Cache-Control:no-cache`，`pragma:no-cache（HTTP1.0）`，或`Cache-Control:max-age=0`等告诉浏览器不用缓存的请求
+
+2. 需要根据`Cookie`，认证信息等决定输入内容的动态请求是不能被缓存的
+
+3. 经过 HTTPS 安全加密的请求
+
+4. POST 请求无法被缓存
+
+5. HTTP 响应头中不包含`Last-Modified/Etag`，也不包含`Cache-Control/Expires`的请求无法被缓存
+
+## 1.6. 浏览器行为对缓存的影响
 
 如果资源已经被浏览器缓存下来，在缓存失效之前，再次请求时，默认会先检查是否命中强缓存，如果强缓存命中则直接读取缓存，如果强缓存没有命中则发请求到服务器检查是否命中协商缓存，如果协商缓存命中，则告诉浏览器还是可以从缓存读取，否则才从服务器返回最新的资源。这是默认的处理方式，这个方式可能被浏览器的行为改变：
 
 1. 当 ctrl+f5 强制刷新网页时，直接从服务器加载，跳过强缓存和协商缓存；
 
 2. 当 f5 刷新网页时，跳过强缓存，但是会检查协商缓存；
+
+## 1.7. 如何避免浏览器缓存
+
+实际上, 工作中很多场景都需要避免浏览器缓存, 除了浏览器隐私模式, 请求时想要禁用缓存, 还可以设置请求头: `Cache-Control: no-cache`, `no-store`,`must-revalidate`
+当然, 还有一种常用做法: 即给请求的资源增加一个版本号, 如下:
+
+```html
+<link rel="stylesheet" type="text/css" href="../css/style.css?version=1.8.9" />
+```
+
+这样做的好处就是你可以自由控制什么时候加载最新的资源.
+不仅如此, HTML 也可以禁用缓存, 即在页面的\节点中加入\标签, 代码如下:
+
+```html
+<meta
+  http-equiv="Cache-Control"
+  content="no-cache, no-store, must-revalidate"
+/>
+```
+
+上述虽能禁用缓存, 但只有部分浏览器支持, 而且由于代理不解析 HTML 文档, 故代理服务器也不支持这种方式.
+
+## 1.8. 总结
+
+### 1.8.1. 浏览器有缓存
+
+![浏览器有缓存](./images/浏览器有缓存.webp)
+
+### 1.8.2. 浏览器无缓存
+
+![浏览器无缓存](./images/浏览器无缓存.webp)
