--- a/05-Browser/存储.md
+++ b/05-Browser/存储.md
@@ -1,24 +1,53 @@
 # 存储
 
-## cookies，sessionStorage 和 localStorage 的区别？
+## cookie，localStorage，sessionStorage，indexDB
 
-sessionStorage 和 localStorage 是 HTML5 Web Storage API 提供的，可以方便的在 web 请求之间保存数据。有了本地数据，就可以避免数据在浏览器和服务器间不必要地来回传递。
+| 特性         | cookie                                     | localStorage             | sessionStorage | indexDB                  |
+| ------------ | ------------------------------------------ | ------------------------ | -------------- | ------------------------ |
+| 数据生命周期 | 一般由服务器生成，可以设置过期时间         | 除非被清理，否则一直存在 | 页面关闭就清理 | 除非被清理，否则一直存在 |
+| 数据存储大小 | 4K                                         | 5M                       | 5M             | 无限                     |
+| 与服务端通信 | 每次都会携带在 header 中，对于请求性能影响 | 不参与                   | 不参与         | 不参与                   |
 
-sessionStorage、localStorage、cookie 都是在浏览器端存储的数据，其中 sessionStorage 的概念很特别，引入了一个“浏览器窗口”的概念。sessionStorage 是在同源的同窗口（或 tab）中，始终存在的数据。也就是说只要这个浏览器窗口没有关闭，即使刷新页面或进入同源另一页面，数据仍然存在。关闭窗口后，sessionStorage 即被销毁。同时“独立”打开的不同窗口，即使是同一页面，sessionStorage 对象也是不同的
+从上表可以看到，`cookie` 已经不建议用于存储。如果没有大量数据存储需求的话，可以使用 `localStorage` 和 `sessionStorage` 。对于不怎么改变的数据尽量使用 `localStorage` 存储，否则可以用 `sessionStorage` 存储。
 
-cookies 会发送到服务器端。其余两个不会。
+## Service Worker
 
-Microsoft 指出 Internet Explorer 8 增加 cookie 限制为每个域名 50 个，但 IE7 似乎也允许每个域名 50 个 cookie。Firefox 每个域名 cookie 限制为 50 个。Opera 每个域名 cookie 限制为 30 个。Firefox 和 Safari 允许 cookie 多达 4097 个字节，包括名（name）、值（value）和等号。Opera 许 cookie 多达 4096 个字节，包括：名（name）、值（value）和等号。Internet Explorer 允许 cookie 多达 4095 个字节，包括：名（name）、值（value）和等号。
+> Service workers 本质上充当 Web 应用程序与浏览器之间的代理服务器，也可以在网络可用时作为浏览器和网络间的代理。它们旨在（除其他之外）使得能够创建有效的离线体验，拦截网络请求并基于网络是否可用以及更新的资源是否驻留在服务器上来采取适当的动作。他们还允许访问推送通知和后台同步 API。
 
-- Cookie
-  - 每个域名存储量比较小（各浏览器不同，大致 4K）
-  - 所有域名的存储量有限制（各浏览器不同，大致 4K）
-  - 有个数限制（各浏览器不同）
-  - 会随请求发送到服务器
-- LocalStorage
-  - 永久存储
-  - 单个域名存储量比较大（推荐 5MB，各浏览器不同）
-  - 总体数量无限制
-- SessionStorage
-  - 只在 Session 内有效
-  - 存储量更大（推荐没有限制，但是实际上各浏览器也不同）
+目前该技术通常用来做缓存文件，提高首屏速度，可以试着来实现这个功能。
+
+```js
+// index.js
+if (navigator.serviceWorker) {
+  navigator.serviceWorker
+    .register('sw.js')
+    .then(function(registration) {
+      console.log('service worker 注册成功')
+    })
+    .catch(function(err) {
+      console.log('servcie worker 注册失败')
+    })
+}
+// sw.js
+// 监听 `install` 事件，回调中缓存所需文件
+self.addEventListener('install', e => {
+  e.waitUntil(
+    caches.open('my-cache').then(function(cache) {
+      return cache.addAll(['./index.html', './index.js'])
+    })
+  )
+})
+
+// 拦截所有请求事件
+// 如果缓存中已经有请求的数据就直接用缓存，否则去请求数据
+self.addEventListener('fetch', e => {
+  e.respondWith(
+    caches.match(e.request).then(function(response) {
+      if (response) {
+        return response
+      }
+      console.log('fetch source')
+    })
+  )
+})
+```
