--- a/03-JS/深拷贝和浅拷贝.md
+++ b/03-JS/深拷贝和浅拷贝.md
@@ -1,5 +1,88 @@
 # 深拷贝和浅拷贝
 
+## 浅拷贝
+
+1. `Object.assign`
+
+   ```js
+   let a = {
+     age: 1
+   }
+   let b = Object.assign({}, a)
+   a.age = 2
+   console.log(b.age) // 1
+   ```
+
+2. 展开运算符（…）
+
+   ```js
+   let a = {
+     age: 1
+   }
+   let b = { ...a }
+   a.age = 2
+   console.log(b.age) // 1
+   ```
+
+通常浅拷贝就能解决大部分问题了，但是当我们遇到如下情况就需要使用到深拷贝了
+
+```js
+let a = {
+  age: 1,
+  jobs: {
+    first: 'FE'
+  }
+}
+let b = { ...a }
+a.jobs.first = 'native'
+console.log(b.jobs.first) // native
+```
+
+如果给一个变量赋值一个对象，那么两者的值会是同一个引用，其中一方改变，另一方也会相应改变。
+通常在开发中我们不希望出现这样的问题，我们可以使用浅拷贝来解决这个问题。
+
 ## 深拷贝
 
-## 浅拷贝
+这个问题通常可以通过 JSON.parse(JSON.stringify(object)) 来解决。
+
+```js
+let a = {
+  age: 1,
+  jobs: {
+    first: 'FE'
+  }
+}
+let b = JSON.parse(JSON.stringify(a))
+a.jobs.first = 'native'
+console.log(b.jobs.first) // FE
+```
+
+但是该方法也是有局限性的：
+
+- 会忽略 undefined
+- 不能序列化函数
+- 不能解决循环引用的对象
+
+如果你的数据中含有以上三种情况下，可以使用 `lodash` 的深拷贝函数。
+
+如果你所需拷贝的对象含有内置类型并且不包含函数，可以使用 `MessageChannel`
+
+```js
+function structuralClone(obj) {
+  return new Promise(resolve => {
+    const { port1, port2 } = new MessageChannel()
+    port2.onmessage = ev => resolve(ev.data)
+    port1.postMessage(obj)
+  })
+}
+
+var obj = {
+  a: 1,
+  b: {
+    c: b
+  }
+}
+// 注意该方法是异步的
+// 可以处理 undefined 和循环引用对象
+const clone = await structuralClone(obj)
+```
