--- a/05-Browser/渲染机制.md
+++ b/05-Browser/渲染机制.md
@@ -2,15 +2,16 @@
 
 ## 浏览器渲染机制
 
-![渲染机制](https://user-gold-cdn.xitu.io/2018/6/23/1642d16f798c0875?imageView2/0/ w/1280/h/960/format/webp/ignore-error/1)
+![渲染机制](images/渲染机制.webp)
 
 浏览器的渲染机制一般分为以下几个步骤
 
 1. 将 HTML 构建成一个 DOM 树（DOM = Document Object Model 文档对象模型），DOM 树的构建过程是一个深度遍历过程：当前节点的所有子节点都构建好后才会去构建当前节点的下一个兄弟节点。
-2. 解析 CSS 样式，生成样式结构体
+2. 解析 CSS 样式，生成 CSSOM 树
 3. 结合 DOM 树和 CSSOM 生成 Rendering Tree（渲染树）。注意：Rendering Tree 渲染树并不等同于 DOM 树，因为一些像 Header 或 display:none 的东西就没必要放在渲染树中了。
 4. 下一步操作称之为布局（Layout），顾名思义就是计算出每个节点在屏幕中的位置 layout render tree。
 5. 再下一步就是绘制(Paint)，即遍历 render 树，并使用浏览器 UI 后端层绘制每个节点。
+6. Display：将像素发送给GPU，展示在页面上。
 
 ## 图层
 
