--- a/05-Browser/事件机制.md
+++ b/05-Browser/事件机制.md
@@ -1,14 +1,16 @@
-# 事件
+# 事件机制
 
-> 涉及面试题：事件的触发过程是怎么样的？知道什么是事件代理嘛？
+## 事件流
 
-## 事件触发三阶段
+“DOM2 级事件”规定的时间流包括三个阶段：
 
-事件触发有三个阶段：
+1. 事件的捕获阶段
+2. 事件的目标阶段（触发自己的事件）
+3. 事件的冒泡阶段
 
-- window 往事件触发处传播，遇到注册的捕获事件会触发
+- `window` 往事件触发处传播，遇到注册的捕获事件会触发
 - 传播到事件触发处时触发注册的事件
-- 从事件触发处往 window 传播，遇到注册的冒泡事件会触发
+- 从事件触发处往 `window` 传播，遇到注册的冒泡事件会触发
 
 事件触发一般来说会按照上面的顺序进行，但是也有特例，如果给一个 body 中的子节点同时注册冒泡和捕获事件，事件触发会按照注册的顺序执行。
 
@@ -32,7 +34,9 @@ node.addEventListener(
 
 ## 注册事件
 
-通常我们使用 `addEventListener` 注册事件，该函数的第三个参数可以是布尔值，也可以是对象。对于布尔值 `useCapture` 参数来说，该参数默认值为 `false` `，useCapture` 决定了注册的事件是捕获事件还是冒泡事件。对于对象参数来说，可以使用以下几个属性
+通常我们使用 `addEventListener` 注册事件，该函数的第三个参数可以是布尔值，也可以是对象。对于布尔值 `useCapture` 参数来说，该参数默认值为 `false`，如果是`true` ，表示在捕获阶段调用事件处理程序；如果是 `false`，表示在冒泡阶段调用事件处理程序。
+
+对于对象参数来说，可以使用以下几个属性
 
 - `capture`：布尔值，和 `useCapture` 作用一样
 - `once`：布尔值，值为 `true` 表示该回调只会调用一次，调用后会移除监听
@@ -81,5 +85,5 @@ node.addEventListener(
 
 事件代理的方式相较于直接给目标注册事件来说，有以下优点：
 
-- 节省内存
-- 不需要给子节点注销事件
+- 内存占用减少，因为只需要一个父元素的事件处理程序，而不必为每个后代都添加事件处理程序。
+- 无需从已删除的元素中解绑处理程序，也无需将处理程序绑定到新元素上。
