--- a/03-JS/防抖和节流.md
+++ b/03-JS/防抖和节流.md
@@ -8,6 +8,8 @@ PS：防抖和节流的作用都是防止函数多次调用。区别在于，假
 
 ## 防抖
 
+> 在事件被触发 n 秒后再执行回调，如果在这 n 秒内又被触发，则重新计时。
+
 ```js
 // func是用户传入需要防抖的函数
 // wait是等待时间
@@ -86,9 +88,14 @@ function debounce(func, wait = 50, immediate = true) {
 }
 ```
 
+- search 搜索联想，用户在不断输入值时，用防抖来节约请求资源。
+- window 触发 resize 的时候，不断的调整浏览器窗口大小会不断的触发这个事件，用防抖来让其只触发一次
+
 ## 节流
 
 防抖动和节流本质是不一样的。防抖动是将多次执行变为最后一次执行，节流是将多次执行变成每隔一段时间执行。
+
+> 规定在一个单位时间内，只能触发一次函数。如果这个单位时间内触发多次函数，只有一次生效。
 
 ```js
 /**
@@ -157,3 +164,6 @@ _.throttle = function(func, wait, options) {
   }
 }
 ```
+
+- 鼠标不断点击触发，mousedown(单位时间内只触发一次)
+- 监听滚动事件，比如是否滑到底部自动加载更多，用 throttle 来判断
