--- a/05-Browser/事件机制.md
+++ b/05-Browser/事件机制.md
@@ -87,3 +87,23 @@ node.addEventListener(
 
 - 内存占用减少，因为只需要一个父元素的事件处理程序，而不必为每个后代都添加事件处理程序。
 - 无需从已删除的元素中解绑处理程序，也无需将处理程序绑定到新元素上。
+
+## 事件中 target,currentTarget
+
+1. target:触发事件的某个具体对象，只会出现在事件流的目标阶段（谁触发谁命中，所以肯定是目标阶段）
+2. currentTarget:绑定事件的对象，恒等于 this，可能出现在事件流的任意一个阶段中
+3. 通常情况下 terget 和 currentTarget 是一致的，我们只要使用 terget 即可，但有一种情况必须区分这三者的关系，那就是在父子嵌套的关系中，父元素绑定了事件，单击了子元素（根据事件流，在不阻止事件流的前提下他会传递至父元素，导致父元素的事件处理函数执行），这时候 currentTarget 指向的是父元素，因为他是绑定事件的对象，而 target 指向了子元素，因为他是触发事件的那个具体对象，如下代码和截图所示：
+
+```html
+<div id="one"><div id="three"></div></div>
+<script>
+  one.addEventListener(
+    'click',
+    function(e) {
+      console.log(e.target) //three
+      console.log(e.currentTarget) //one
+    },
+    false
+  )
+</script>
+```
