--- a/05-Browser/渲染机制.md
+++ b/05-Browser/渲染机制.md
@@ -1,5 +1,21 @@
 # 渲染机制
 
+## 浏览器的主要组件
+
+1. 用户界面 - 包括地址栏、前进/后退按钮、书签菜单等。除了浏览器主窗口显示的请求的页面外，其他显示的各个部分都属于用户界面。其他显示的各个部分都属于用户界面。
+
+2. 浏览器引擎 - 在用户界面和呈现引擎之间传送指令。
+
+3. 渲染引擎 - 负责显示请求的内容。如果请求的内容是 HTML，它就负责解析 HTML 和 CSS 内容，并将解析后的内容显示在屏幕上。
+
+4. 网络 - 用于网络调用，如 HTTP 请求。其接口与平台无关，为所有平台提供底层实现。
+
+5. 用户界面后端 - 用于绘制基本的窗口小部件，比如组合框和窗口。其公开了与平台无关的通用接口，而在底层使用操作系统的用户界面方法。
+
+6. JavaScript 解释器 - 用于解析和执行 JavaScript 代码。
+
+7. 数据存储 - 这是持久层。浏览器需要在硬盘上保存各种数据，例如 Cookie。新的 HTML 规范(HTML5) 定义了“网络数据库” ，这是一个完整的浏览器内数据库。
+
 ## 浏览器渲染机制
 
 ![渲染机制](images/渲染机制.webp)
@@ -11,7 +27,7 @@
 3. 结合 DOM 树和 CSSOM 生成 Rendering Tree（渲染树）。注意：Rendering Tree 渲染树并不等同于 DOM 树，因为一些像 Header 或 display:none 的东西就没必要放在渲染树中了。
 4. 下一步操作称之为布局（Layout），顾名思义就是计算出每个节点在屏幕中的位置 layout render tree。
 5. 再下一步就是绘制(Paint)，即遍历 render 树，并使用浏览器 UI 后端层绘制每个节点。
-6. Display：将像素发送给GPU，展示在页面上。
+6. Display：将像素发送给 GPU，展示在页面上。
 
 ## 图层
 
