--- a/03-JS/10.JS各种宽高以及位置的区别.md
+++ b/03-JS/10.JS各种宽高以及位置的区别.md
@@ -1,10 +1,8 @@
-# JavaScript
+# js 各种位置的区别
 
-## js 各种位置的区别
+## DOM 对象
 
-### DOM 对象
-
-#### 只读属性
+### 只读属性
 
 所谓的只读属性指的是 DOM 节点的固有属性，该属性只能通过 js 去获取而不能通过 js 去设置，而且获取的值是只有数字并不带单位的（px,em 等），如下：
 
@@ -18,7 +16,7 @@
 5. scrollHeight 和 scrollWidth
    表示了所有区域的高度，包含了因为滚动被隐藏的部分。
 
-#### 可读可写属性
+### 可读可写属性
 
 1. scrollTop 和 scrollLeft
    当元素其中的内容超出其宽高的时候，元素被卷起的高度和宽度。
@@ -26,7 +24,7 @@
    对于一个 dom 元素，它的 style 属性返回的是一个对象，这个对象中的任意一个属性是可读写的。如 obj.style.top,obj.style.wdith 等，在读的时候，他们返回的值常常是带有单位的(如 px),同时，对于这种方式，
    它只能够获取到该元素的行内样式，而并不能获取到该元素最终计算好的样式，这就是在读取属性值得时候和以上只读属性的区别，要获取计算好的样式，请使用 obj.currentstyle（IE）和 getComputedStyle(IE 之外的浏览器)。另一方面，这些属性能够被赋值，js 运动的原理就是通过不断修改这些属性的值而达到其位置改变的，需要注意的是，给这些属性赋值的时候需要带单位的要带上单位，否则不生效。
 
-### Event 对象
+## Event 对象
 
 在 js 中，对于元素的运动的操作通常都会涉及到 event 对象，而 event 对象也存在很多位置属性，且由于浏览器兼容性问题会导致这些属性间相互混淆
 
